--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,14 +10,23 @@
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
+        android:debuggable="false"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ShoesStore"
-        android:debuggable="false"
         tools:targetApi="35">
+        <activity
+            android:name=".CheckOutActivity"
+            android:exported="false" />
+        <activity
+            android:name=".controller.CartActivity"
+            android:exported="false" />
+        <activity
+            android:name=".controller.product.ProductDetailActivity"
+            android:exported="false" />
         <activity
             android:name=".controller.product.EditProductActivity"
             android:exported="false" />
